	  reports LPC177x/8x GPIO registers when GPIO debug is enabled
	  (2013-4-05).
	* arch/arm/src/Makefile:  The variable NUTTX already includes
	  the extension $(EXEEXT).  So remove the second extension
	  $(NUTTX)$(EXEEXT) in two places (2013-4-7).
	* arch/arm/src/lpc17xx/lpc17_gpioint.c:  Disable interrrupts in
	  lpc17_setintedge().  This logic must be atomic because it can be
	  re-entered before it completes enabled interrupts, sometimes
	  leaving the interrupts in a strange state (2013-4-7).
	* arch/arm/src/lpc17_lcd.c:  Rommel Marcelo go the LPC1788
	  framebuffer-based LCD working.  Very nice! (2013-4-08).
	* arch/arm/src/lm/lm_clockconfig.c and configs/lm4f120-launchpad:
	  Fix handling of the RCC SYSDIV2 field whent the PLL output is
	  400MHz.  Don't forget to set the USERCC2 bit in the register or
	  all is for naught (2013-4-09).
	* configs/zkit-arm-1769/src/up_lcd.c, up_ssp.c, and up_spi.c:
	  Use SSP0 to LCD and SPI to SD-Card on the Zkit-arm-1769 board.
	  From Manikandan. S (2013-4-10)
	* configs/olimex-lpc1766stk/usbserial:  Converted to use the
	  kconfig-config frontends tools (2013-4-12).
	* drivers/usbdev/pl2303.c: Fix some compilation errors that
	  crept in when fixes to the CDC/ACM driver where blindly
	  incorporated in the PL2303 driver (2013-4-12).
	* configs/stm3210e-eval/usbserial:  Converted to use the
	  kconfig-config frontends tools (2013-4-12).
	* configs/nucleus2g/usbserial:  Converted to use the
	  kconfig-config frontends tools (2013-4-12).
	* arch/arm/src/kl and arch/arm/include/kl:  Add support for the
	  Kinetis L family of Cortex-M0+ MCUs.  Contributed by Alan
	  Carvalho de Assis.  NOTE:  This is still very much a work in
	  progress as of this initial commit (2013-04-16).
	* configs/freedom-kl25z:  Support for the Freedom KL25Z board
	  contributed by Alan Carvalho de Assis.  NOTE:  This is still
	  very much a work inprogress as of this initial commit
	  (2013-04-16).