@@ -293,7 +293,7 @@ static inline void irqrestore(irqstate_t flags)
   setbasepri((uint32_t)flags);
 #else
   /* If bit 0 of the primask is 0, then we need to restore
-   * interupts.
+   * interrupts.
    */
 
   __asm__ __volatile__
