@@ -148,12 +148,12 @@ static inline void up_registerdump(void)
             current_regs[REG_R12], current_regs[REG_R13],
             current_regs[REG_R14], current_regs[REG_R15]);
 #ifdef CONFIG_NUTTX_KERNEL
-      lldbg("xPSR: %08x BASEPRI: %08x EXEC_RETURN: %08x\n",
-            current_regs[REG_XPSR], current_regs[REG_BASEPRI],
+      lldbg("xPSR: %08x PRIMASK: %08x EXEC_RETURN: %08x\n",
+            current_regs[REG_XPSR], current_regs[REG_PRIMASK],
             current_regs[REG_EXC_RETURN]);
 #else
-      lldbg("xPSR: %08x BASEPRI: %08x\n",
-            current_regs[REG_XPSR], current_regs[REG_BASEPRI]);
+      lldbg("xPSR: %08x PRIMASK: %08x\n",
+            current_regs[REG_XPSR], current_regs[REG_PRIMASK]);
 #endif
     }
 }
